apps/console/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: openshift-console
  name: openshift-console
  namespace: openshift-console
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openshift-console
  template:
    metadata:
      labels:
        app: openshift-console
    spec:
      containers:
      - args:
        - /opt/bridge/bin/bridge
        - --public-dir=/opt/bridge/static
        - --listen=http://0.0.0.0:9000
        - --user-settings-location=localstorage
        - --base-address=https://console.192.168.0.100.nip.io/
        - --prometheus-public-url=http://metrics.192.168.0.100.nip.io/
        - --service-ca-file=/var/service-ca/service-ca.crt
        image: quay.io/openshift/origin-console:4.10
        name: openshift-console
        ports:
        - containerPort: 9000
        volumeMounts:
          - name: service-ca
            readOnly: true
            mountPath: /var/service-ca
      serviceAccount: admin
      volumes:
      - name: service-ca
        configMap:
          name: service-ca
          defaultMode: 420
          optional: true
